--- a/frontend/src/components/TaskItem.module.css
+++ b/frontend/src/components/TaskItem.module.css
@@ -2,15 +2,16 @@
   height: 3rem;
   display: flex;
   flex-direction: row;
-  justify-content: flex-start;
-  align-items: center;
-  column-gap: 0.25rem;
+  align-items: stretch;
+  column-gap: 0.5rem;
+  border-bottom: 1px solid var(--color-text-secondary);
+  margin-top: 1rem;
 }
 
 .textContainer {
   height: 100%;
-  border-bottom: 1px solid var(--color-text-secondary);
   flex-grow: 1;
+  min-width: 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -19,7 +20,6 @@
 }
 
 .textContainer span {
-  width: 100%;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -27,9 +27,6 @@
 
 .title {
   font: var(--font-label);
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  overflow: hidden;
 }
 
 .checked {
@@ -39,6 +36,9 @@
 .link {
   color: inherit;
   text-decoration: none;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .link:hover {
